--- a/src/main/webapp/resources/views/Main.html
+++ b/src/main/webapp/resources/views/Main.html
@@ -1,5 +1,3 @@
-<link href="css/card.css" rel="stylesheet">
-<link href="css/main.css" rel="stylesheet">
 <div class="header-wrap">
     <div class="container">
         <div class="row centered">
@@ -53,111 +51,127 @@
             </ul>
         </div>
     </div>
-    <div class="row masonry" data-columns>
-        <div class="item">
-            <div class="thumbnail">
-                <div class="caption centered">
-                    <a href="#"><h3>Project name</h3></a>
-                </div>
-                <a href="#"><img src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
-                <div class="caption">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-                        ut
-                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                        cillum dolore eu fugiat nulla pariatur.</p>
-                    <hr>
-                    <div class="row">
-                        <div class="col-xs-6">
-                            <div>min</div>
-                            <div><span class="fa fa-dollar"></span>100000</div>
-                        </div>
-                        <div class="col-xs-6">
-                            <div class="right-box">Still needed</div>
-                            <div class="right-box"><span class="fa fa-dollar"></span>9999</div>
+    <div class="row">
+        <div class="container col-md-4 col-xs-12">
+            <div class="item">
+                <div class="thumbnail">
+                    <div class="caption centered">
+                        <a href="#"><h3>Project name</h3></a>
+                    </div>
+                    <a href="#"><img ng-src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
+                    <div class="caption">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore
+                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                            nisi
+                            ut
+                            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+                            esse
+                            cillum dolore eu fugiat nulla pariatur.</p>
+                        <hr>
+                        <div class="row">
+                            <div class="col-xs-6">
+                                <div>min</div>
+                                <div><span class="fa fa-dollar"></span>100000</div>
+                            </div>
+                            <div class="col-xs-6">
+                                <div class="right-box">Still needed</div>
+                                <div class="right-box"><span class="fa fa-dollar"></span>9999</div>
+                            </div>
                         </div>
                     </div>
-                </div>
 
+                </div>
             </div>
         </div>
-        <div class="item">
-            <div class="thumbnail">
-                <div class="caption centered">
-                    <a href="#"><h3>Project name</h3></a>
-                </div>
-                <a href="#"><img src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
-                <div class="caption">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-                        ut
-                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                        cillum dolore eu fugiat nulla pariatur.</p>
-                    <hr>
-                    <div class="row">
-                        <div class="col-xs-6">
-                            <div>min</div>
-                            <div><span class="fa fa-dollar"></span>100000</div>
-                        </div>
-                        <div class="col-xs-6">
-                            <div class="right-box">Still needed</div>
-                            <div class="right-box"><span class="fa fa-dollar"></span>9999</div>
+        <div class="container col-md-4 col-xs-12">
+            <div class="item">
+                <div class="thumbnail">
+                    <div class="caption centered">
+                        <a href="#"><h3>Project name</h3></a>
+                    </div>
+                    <a href="#"><img ng-src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
+                    <div class="caption">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore
+                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                            nisi
+                            ut
+                            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+                            esse
+                            cillum dolore eu fugiat nulla pariatur.</p>
+                        <hr>
+                        <div class="row">
+                            <div class="col-xs-6">
+                                <div>min</div>
+                                <div><span class="fa fa-dollar"></span>100000</div>
+                            </div>
+                            <div class="col-xs-6">
+                                <div class="right-box">Still needed</div>
+                                <div class="right-box"><span class="fa fa-dollar"></span>9999</div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="item">
-            <div class="thumbnail">
-                <div class="caption centered">
-                    <a href="#"><h3>Project name</h3></a>
-                </div>
-                <a href="#"><img src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
-                <div class="caption">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-                        ut
-                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                        cillum dolore eu fugiat nulla pariatur.</p>
-                    <hr>
-                    <div class="row">
-                        <div class="col-xs-6">
-                            <div>min</div>
-                            <div><span class="fa fa-dollar"></span>100000</div>
-                        </div>
-                        <div class="col-xs-6">
-                            <div class="right-box">Still needed</div>
-                            <div class="right-box"><span class="fa fa-dollar"></span>9999</div>
+        <div class="container col-md-4 col-xs-12">
+            <div class="item">
+                <div class="thumbnail">
+                    <div class="caption centered">
+                        <a href="#"><h3>Project name</h3></a>
+                    </div>
+                    <a href="#"><img ng-src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
+                    <div class="caption">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore
+                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                            nisi
+                            ut
+                            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+                            esse
+                            cillum dolore eu fugiat nulla pariatur.</p>
+                        <hr>
+                        <div class="row">
+                            <div class="col-xs-6">
+                                <div>min</div>
+                                <div><span class="fa fa-dollar"></span>100000</div>
+                            </div>
+                            <div class="col-xs-6">
+                                <div class="right-box">Still needed</div>
+                                <div class="right-box"><span class="fa fa-dollar"></span>9999</div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="item">
-            <div class="thumbnail">
-                <div class="caption centered">
-                    <a href="#"><h3>Project name</h3></a>
-                </div>
-                <a href="#"><img src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
-                <div class="caption">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-                        ut
-                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                        cillum dolore eu fugiat nulla pariatur.</p>
-                    <hr>
-                    <div class="row">
-                        <div class="col-xs-6">
-                            <div>min</div>
-                            <div><span class="fa fa-dollar"></span>100000</div>
-                        </div>
-                        <div class="col-xs-6">
-                            <div class="right-box">Still needed</div>
-                            <div class="right-box"><span class="fa fa-dollar"></span>9999</div>
+        <div class="container col-md-4 col-xs-12">
+            <div class="item">
+                <div class="thumbnail">
+                    <div class="caption centered">
+                        <a href="#"><h3>Project name</h3></a>
+                    </div>
+                    <a href="#"><img ng-src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
+                    <div class="caption">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore
+                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                            nisi
+                            ut
+                            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+                            esse
+                            cillum dolore eu fugiat nulla pariatur.</p>
+                        <hr>
+                        <div class="row">
+                            <div class="col-xs-6">
+                                <div>min</div>
+                                <div><span class="fa fa-dollar"></span>100000</div>
+                            </div>
+                            <div class="col-xs-6">
+                                <div class="right-box">Still needed</div>
+                                <div class="right-box"><span class="fa fa-dollar"></span>9999</div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -173,66 +187,68 @@
             </ul>
         </div>
     </div>
-    <div class="row masonry" data-columns>
-        <div class="item">
-            <div class="thumbnail">
-                <div class="caption centered">
-                    <a href="#"><h3>Event name</h3></a>
+    <div class="row">
+        <div class="container col-md-4 col-xs-12">
+            <div class="item">
+                <div class="thumbnail">
+                    <div class="caption centered">
+                        <a href="#"><h3>Event name</h3></a>
+                    </div>
+                    <a href="#"><img ng-src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
+                    <div class="caption">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore
+                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                            nisi
+                            ut
+                            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+                            esse
+                            cillum dolore eu fugiat nulla pariatur.</p>
+                        <span><a class="btn btn-success btn-block btn-md" href="#">I will go on</a></span>
+                    </div>
                 </div>
-                <a href="#"><img src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
-                <div class="caption">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                        nisi
-                        ut
-                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-                        esse
-                        cillum dolore eu fugiat nulla pariatur.</p>
-                    <span><a class="btn btn-success btn-block btn-md" href="#">I will go on</a></span>
-                </div>
-
             </div>
         </div>
-        <div class="item">
-            <div class="thumbnail">
-                <div class="caption centered">
-                    <a href="#"><h3>Event name</h3></a>
+        <div class="container col-md-4 col-xs-12">
+            <div class="item">
+                <div class="thumbnail">
+                    <div class="caption centered">
+                        <a href="#"><h3>Event name</h3></a>
+                    </div>
+                    <a href="#"><img ng-src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
+                    <div class="caption">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore
+                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                            nisi
+                            ut
+                            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+                            esse
+                            cillum dolore eu fugiat nulla pariatur.</p>
+                        <span><a class="btn btn-success btn-block btn-md" href="#">I will go on</a></span>
+                    </div>
                 </div>
-                <a href="#"><img src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
-                <div class="caption">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                        nisi
-                        ut
-                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-                        esse
-                        cillum dolore eu fugiat nulla pariatur.</p>
-                    <span><a class="btn btn-success btn-block btn-md" href="#">I will go on</a></span>
-
-                </div>
-
             </div>
         </div>
-        <div class="item">
-            <div class="thumbnail">
-                <div class="caption centered">
-                    <a href="#"><h3>Event name</h3></a>
+        <div class="container col-md-4 col-xs-12">
+            <div class="item">
+                <div class="thumbnail">
+                    <div class="caption centered">
+                        <a href="#"><h3>Event name</h3></a>
+                    </div>
+                    <a href="#"><img ng-src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
+                    <div class="caption">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore
+                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                            nisi
+                            ut
+                            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+                            esse
+                            cillum dolore eu fugiat nulla pariatur.</p>
+                        <span><a class="btn btn-success btn-block btn-md" href="#">I will go on</a></span>
+                    </div>
                 </div>
-                <a href="#"><img src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
-                <div class="caption">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                        nisi
-                        ut
-                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-                        esse
-                        cillum dolore eu fugiat nulla pariatur.</p>
-                    <span><a class="btn btn-success btn-block btn-md" href="#">I will go on</a></span>
-                </div>
-
             </div>
         </div>
     </div>
