--- a/src/main/resources/static/views/main/LoginPage.html
+++ b/src/main/resources/static/views/main/LoginPage.html
@@ -18,12 +18,13 @@
                 <input type="password" class="form-control" placeholder="password" id="password" name="password"
                        ng-model="credentials.password">
             </div>
-            <div class="alert alert-danger" ng-show="error">Username or password is incorrect</div>
+            <div class="alert alert-danger" ng-show="error">
+                Username or password is incorrect
+            </div>
             <button type="submit" class="btn btn-success">Login</button>
             <a href="#!/createAccount" class="btn btn-primary" ng-click="close()">
                 <span class="fa fa-user-circle-o"></span> Create an account
-            </a></form>
-        <div ng-show="authenticated"><a href="" ng-click="logout()">logout</a></div>
-        <!--</form>-->
+            </a>
+        </form>
     </div>
 </div>
