--- a/src/main/resources/static/views/main/LoginPage.html
+++ b/src/main/resources/static/views/main/LoginPage.html
@@ -11,7 +11,7 @@
             <div class="form-group">
                 <label for="email">Login:</label>
                 <input type="text" class="form-control" placeholder="login" id="email" name="email"
-                       ng-model="credentials.username">
+                       ng-model="credentials.email">
             </div>
             <div class="form-group">
                 <label for="password">Password:</label>
