--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -335,3 +335,8 @@ hr {
         content: '3 .col-xs-4';
     }
 }
+
+.pagination>li>a, .pagination>li>span {
+border-radius: 50% !important;
+margin: 0 5px;
+}
