--- a/src/main/resources/static/views/main/Navbar.html
+++ b/src/main/resources/static/views/main/Navbar.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-default navbar-fixed-top" ng-controller="MainController">
+<div class="navbar navbar-default navbar-fixed-top ng-cloak" ng-controller="MainController" ng-cloak>
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse"
@@ -25,7 +25,6 @@
                         </div>
                     </form>
                 </li>
-                <li><a href="#!/user">User (TEMPORARY)</a></li>
             </ul>
             <div ng-show="!authenticated">
                 <ul class="nav navbar-nav navbar-right">
