--- a/src/main/resources/static/css/background.css
+++ b/src/main/resources/static/css/background.css
@@ -1,10 +1,14 @@
 #bg {
 	background: white;
-	height:100%;
+	height:110%;
+	position: relative;
+	top: -20px;
 }
 
 #bg img {
 	text-align:center;
-	display:block; 
+	display:block;
 	margin:0 auto;
+	position: relative;
+	top: 70px;
 }
