--- a/src/main/resources/static/views/main/Navbar.html
+++ b/src/main/resources/static/views/main/Navbar.html
@@ -26,14 +26,14 @@
                     </form>
                 </li>
             </ul>
-            <div ng-show="!authenticated">
+            <div ng-if="!authenticated">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="active">
                         <a href="" ng-click="openPopup()">Login</a>
                     </li>
                 </ul>
             </div>
-            <div ng-show="authenticated">
+            <div ng-if="authenticated">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown active "><a class="dropdown-toggle" data-toggle="dropdown">
                     <span class="pull-left" style="margin-right:8px; margin-top:-5px;">
