--- a/src/main/resources/static/views/main/LoginPage.html
+++ b/src/main/resources/static/views/main/LoginPage.html
@@ -1,4 +1,4 @@
-<div ng-controller="MainController as $ctrl">
+<div ng-controller="LoginController">
     <div class="modal-header">
         <h4 class="modal-title">Registration
             <button class="close" type="button" ng-click="close()">
@@ -7,19 +7,24 @@
         </h4>
     </div>
     <div class="modal-body" id="modal-body">
-        <form action="" method="POST">
+        <form role="form" ng-submit="login()">
             <div class="form-group">
-                <input type="text" class="form-control" placeholder="login" value="">
+                <label for="email">Login:</label>
+                <input type="text" class="form-control" placeholder="login" id="email" name="email"
+                       ng-model="credentials.email">
             </div>
             <div class="form-group">
-                <input type="password" class="form-control" placeholder="password" value="">
+                <label for="password">Password:</label>
+                <input type="password" class="form-control" placeholder="password" id="password" name="password"
+                       ng-model="credentials.password">
+            </div>
+            <div class="alert alert-danger" ng-show="error">
+                Username or password is incorrect
             </div>
             <button type="submit" class="btn btn-success">Login</button>
-            <form action="">
-                <button class="btn btn-primary" type="submit">
-                    <span class="fa fa-user-circle-o"></span> Create an account
-                </button>
-            </form>
+            <a href="#!/createAccount" class="btn btn-primary" ng-click="close()">
+                <span class="fa fa-user-circle-o"></span> Create an account
+            </a>
         </form>
     </div>
 </div>
