--- a/src/main/resources/static/views/user/UserPage.html
+++ b/src/main/resources/static/views/user/UserPage.html
@@ -1,47 +1,3 @@
-<ul class="nav navbar-nav navbar-right">
-    <li class="dropdown active "><a class="dropdown-toggle" data-toggle="dropdown">
-                    <span class="pull-left" style="margin-right:8px; margin-top:-5px;">
-                        <img ng-src="http://vev.ru/uploads/images/00/07/64/2011/10/12/c26b1b.jpg"
-                             class="img-responsive img-circle" title="UserName"
-                             alt="UserName" width="30px" height="30px"/>
-                    </span>
-        <span><h3>Оставлю пока это тут</h3></span>
-        <span class="caret"></span></a>
-        <ul class="dropdown-menu">
-            <li>
-                <div class="navbar-content">
-                    <div class="row">
-                        <div class="col-md-5 col-xs-5">
-                            <img ng-src="http://vev.ru/uploads/images/00/07/64/2011/10/12/c26b1b.jpg"
-                                 alt="AltText" class="img-responsive img-circle"
-                                 width="120px" height="120px"/>
-                        </div>
-                        <div class="col-md-7 col-xs-7" style="margin-left: -35px">
-                            <div class="container">
-                                <div>Welcome back,<strong> UserName!</strong></div>
-                                <div class="container"
-                                     style="margin-top:5px; font-size: 15px; font-weight: 500">
-                                    <ul class="non-marker">
-                                        <li><a href="#!/user"><span class="fa fa-user-o" aria-hidden="true"
-                                                                    style="margin-right: 5px"></span>My account</a></li>
-                                        <li><a href="#!/projects"><span class="fa fa-star" aria-hidden="true"
-                                                                        style="margin-right: 5px"></span>Favourites</a></li>
-                                        <li><a href="#!/help"><span class="fa fa-question-circle-o"
-                                                              style="margin-right: 5px"></span>Help</a></li>
-                                        <li><a href="#" class="btn btn-success btn-md"
-                                               style="margin-top: 5px"><span class="fa fa-sign-out"
-                                                                             aria-hidden="true"></span>Sign Out</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </li>
-        </ul>
-    </li>
-</ul>
-
 <div class="container">
     <div class="row">
         <div class="col-xs-12">
@@ -72,7 +28,7 @@
                                     </tr>
                                     <tr>
                                         <th>Email:</th>
-                                        <td>User`s email</td>
+                                        <td>User`s username</td>
                                     </tr>
                                     <tr>
                                         <th>Phone:</th>
