--- a/src/main/resources/static/views/user/EditUser.html
+++ b/src/main/resources/static/views/user/EditUser.html
@@ -1,3 +1,4 @@
+<div class="alert alert-success" ng-show="loading">UPDATING</div>
 <div class="container">
     <div class="row">
         <div class="col-xs-12">
